--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,11 @@ jobs:
     - stage: deploy
       script:
         - npm run build
+        - truffle compile
+        - ganache-cli -p 7545 > /dev/null &
+        - sleep 5
+        - truffle migrate 
+        - truffle test
       deploy:
         provider: surge
         skip_cleanup: true
