Settate un po' di cose

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ jobs:
   include:
     - stage: deploy
       script:
+        - npm run lint
         - npm run build
       deploy:
         provider: surge
