--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-scripts": "2.1.5"
   },
   "devDependencies": {
-    "eslint": "^5.14.1",
+    "eslint": "5.12.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.16.0",
