aggiunto editorconfig e spenta una regola di eslint (prop types)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
     "rules": {
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
         "react/prefer-stateless-function": "off",
+        "react/prop-types": "off",
         "no-console": "off"
     }
 }
