--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "soldino-poc",
+  "name": "soldino",
   "version": "0.1.0",
   "private": true,
   "repository": {
@@ -15,17 +15,13 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "lint": "./node_modules/.bin/eslint src/"
-  },
   "dependencies": {
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-redux": "^6.0.1",
+    "react-scripts": "2.1.5",
+    "redux": "^4.0.1",
+    "web3": "^1.0.0-beta.46"
   },
   "devDependencies": {
     "eslint": "5.12.0",
@@ -33,7 +29,16 @@
     "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "pre-commit": "^1.2.2"
+    "pre-commit": "^1.2.2",
+    "truffle-contract": "^4.0.6"
+
+  },
+  "scripts": {
+    "start": "truffle compile && truffle migrate --reset && npx react-scripts start",
+    "build": "react-scripts build",
+    "lint": "./node_modules/.bin/eslint src/",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "pre-commit": "lint",
   "author": "8Lab Solutions",
