--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "history": "^4.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "^6.0.1",
-    "react-scripts": "2.1.5",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
     "web3": "^1.0.0-beta.46"
   },
   "devDependencies": {
@@ -31,7 +35,6 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "pre-commit": "^1.2.2",
     "truffle-contract": "^4.0.6"
-
   },
   "scripts": {
     "start": "truffle compile && truffle migrate --reset && npx react-scripts start",
