--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "material-design-icons": "^3.0.1",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-final-form": "^4.1.0",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
