--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
