--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-final-form": "^4.1.0",
+    "react-images-upload": "^1.2.6",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
