--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,28 +1,38 @@
+
 {
-    "env": {
-        "browser": true,
-        "es6": true,
-        "node":true
-    },
-    "extends": [
-        "airbnb",
-        "eslint:recommended",
-        "plugin:react/recommended"
-    ],
-    "parser": "babel-eslint",
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": 2018
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-        "react/prefer-stateless-function": "off",
-        "react/prop-types": "off",
-        "no-console": "off"
-    }
+  "env": {
+      "browser": true,
+      "jest": true,
+      "es6": true,
+      "node": true,
+      "mocha": true
+  },
+  "extends": [
+      "airbnb",
+      "eslint:recommended",
+      "plugin:react/recommended"
+  ],
+  "parser": "babel-eslint",
+  "parserOptions": {
+      "ecmaFeatures": {
+          "jsx": true
+      },
+      "ecmaVersion": 2018
+  },
+  "plugins": [
+      "react"
+  ],
+  "rules": {
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+      "react/prefer-stateless-function": "off",
+      "react/prop-types": "off",
+      "no-console": "off",
+      "import/no-unresolved": "off"
+  },
+  "globals": {
+    "artifacts": true,
+    "web3": true,
+    "assert": true,
+    "contract": true
+  }
 }
