--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "commondir": "^1.0.1",
     "history": "^4.7.2",
     "ipfs-mini": "^1.1.5",
-    "nyc": "^13.3.0",
-    "prop-types": "^15.7.2",
     "jspdf": "^1.5.3",
     "material-design-icons": "^3.0.1",
+    "nyc": "^13.3.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-final-form": "^4.1.0",
@@ -40,9 +40,10 @@
     "react-router-redux": "^4.0.8",
     "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
+    "redux-persist": "^5.10.0",
     "truffle": "^5.0.10",
-    "web3": "1.0.0-beta.37",
-    "redux-persist": "^5.10.0"
+    "truffle-assertions": "^0.8.2",
+    "web3": "1.0.0-beta.37"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
