--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "react-images-upload": "^1.2.6",
     "react-multiselect-checkboxes": "^0.1.1",
     "react-particles-js": "^2.5.1",
+    "react-popper": "^1.3.3",
     "react-redux": "^6.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^2.1.8",
+    "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
     "truffle": "^5.0.10",
