--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "redux-persist": "^5.10.0",
     "truffle": "^5.0.10",
     "truffle-assertions": "^0.8.2",
+    "truffle-hdwallet-provider": "^1.0.8",
     "web3": "1.0.0-beta.37"
   },
   "devDependencies": {
