--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "history": "^4.7.2",
     "ipfs-mini": "^1.1.5",
     "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.1.1",
     "material-design-icons": "^3.0.1",
     "nyc": "^13.3.0",
     "prop-types": "^15.7.2",
