--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "truffle": "^5.0.10",
     "truffle-assertions": "^0.8.2",
     "truffle-hdwallet-provider": "^1.0.8",
-    "web3": "1.0.0-beta.37"
+    "web3": "^1.0.0-beta.54"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -67,7 +67,7 @@
     "eth-gas-reporter": "^0.1.12",
     "pre-commit": "^1.2.2",
     "solidity-coverage": "^0.5.11",
-    "truffle-contract": "^4.0.6"
+    "truffle-contract": "^4.0.14"
   },
   "scripts": {
     "start": "truffle compile && truffle migrate --reset && npx react-scripts start",
