--- a/package.json
+++ b/package.json
@@ -51,13 +51,15 @@
     "redux-persist": "^5.10.0",
     "truffle": "^5.0.10",
     "truffle-assertions": "^0.8.2",
-    "truffle-hdwallet-provider": "^1.0.8",
+    "truffle-hdwallet-provider": "^1.0.0-web3one.5",
     "web3": "^1.0.0-beta.54"
   },
   "devDependencies": {
+    "any-promise": "^1.3.0",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bindings": "^1.5.0",
     "coveralls": "^3.0.3",
     "eslint": "5.12.0",
     "eslint-config-airbnb": "^17.1.0",
