--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "truffle": "^5.0.10",
     "truffle-assertions": "^0.8.2",
     "truffle-hdwallet-provider": "^1.0.0-web3one.5",
-    "web3": "^1.0.0-beta.54"
+    "web3": "1.0.0-beta.37"
   },
   "devDependencies": {
     "any-promise": "^1.3.0",
