--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "commondir": "^1.0.1",
     "ganache-cli": "^6.4.3",
     "history": "^4.7.2",
+    "ipfs-http-client": "^30.1.4",
     "ipfs-mini": "^1.1.5",
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.1.1",
