--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ganache-cli": "^6.4.3",
     "history": "^4.7.2",
     "ipfs-http-client": "^30.1.4",
+    "ipfs-mini": "^1.1.5",
     "jspdf": "^1.5.3",
     "jspdf-autotable": "^3.1.1",
     "material-design-icons": "^3.0.1",
