--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "truffle": "^5.0.10",
     "truffle-assertions": "^0.8.2",
     "truffle-hdwallet-provider": "^1.0.0-web3one.5",
-    "web3": "1.0.0-beta.37"
+    "web3": "^1.0.0-beta.37"
   },
   "devDependencies": {
     "any-promise": "^1.3.0",
@@ -69,9 +69,10 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eth-gas-reporter": "^0.1.12",
+    "jsdom-global": "3.0.2",
     "pre-commit": "^1.2.2",
     "solidity-coverage": "^0.5.11",
-    "truffle-contract": "^4.0.14"
+    "truffle-contract": "^4.0.15"
   },
   "scripts": {
     "start": "truffle compile && truffle migrate --reset && npx react-scripts start",
@@ -81,7 +82,8 @@
     "solidity-test": "truffle test",
     "coverage": "cp sol_coverage_patch/parser.js node_modules/solidity-parser-sc/build/ && ./node_modules/.bin/solidity-coverage",
     "eject": "react-scripts eject",
-    "migrateropsten": "./node_modules/.bin/truffle migrate --network ropsten"
+    "migrateropsten": "./node_modules/.bin/truffle migrate --network ropsten",
+    "test-integration": "kill -9 $(pidof ipfs) && ipfs daemon & truffle test"
   },
   "pre-commit": "lint",
   "author": "8Lab Solutions",
